# ShellForge

./: .gitignore  .zshrc  LICENSE.m  README.md  alanoj.omp.json  alanoj.omp.json.bak  config  create_git_repo.sh  dev.sh  ghostty_config  pyproject.toml  shellforge.omp.json  shellforge_setup.sh
.github/workflows/: ci.yml
assets/nvim/: init.lua
assets/nvim/config/: options.lua  snippets.lua  themes.lua
assets/nvim/lua_configs/config/: colors.lua
assets/nvim/lua_configs/plugins/: telescope.lua
nvim_configs/: init.lua
nvim_configs/lua_configs/config/: keymaps.lua  options.lua
nvim_configs/lua_configs/plugins/: cmp.lua  colorscheme.lua  dashboard.lua  extra.lua  fidget.lua  kanagawa.lua  lualine.lua  neo-tree.lua  noice.lua  plugins.lua
src/shellforge/: bootstrap.py  cli.py  doctor.py  installer.py  paths.py  system.py
src/shellforge/assets/nvim/plugins/: dashboard.lua  flash.lua
src/shellforge/assets/shell/: .zshrc
src/shellforge/core/: commands.py  files.py  packages.py  tools.py
src/shellforge/modes/: demo.py  doctor.py
src/shellforge/runtime/: demo.py  events.py  recorder.py  replay.py  types.py
src/shellforge/ui/: app.py  constants.py  logo.py  logs.py  progress.py  renderer.py  splash.py
src/shellforge/ui/styles/: banner.css  base.css  demo.css  doctor.css  input.css  panels.css
src/shellforge/ui/views/: demo.py  doctor.py
src/shellforge/ui/widgets/: banner.py  input.py  logs.py  panel.py
